@startuml ClassDiagram

' =============================
' Classes de Sensores
' =============================
class Sensor {
  - int idSensor
  - String tipo
  + boolean validarSensores()
}

class SensorTemperatura {
  - double temperatura
  + boolean validarTemperatura()
}

class SensorUmidade {
  - double umidade
  + boolean validarUmidade()
}

class SensorInfravermelho {
  - boolean ativo
  + boolean validarPragas()
}

Sensor <|-- SensorTemperatura
Sensor <|-- SensorUmidade
Sensor <|-- SensorInfravermelho

' =============================
' Drone e Missões
' =============================
class Drone {
  - int idDrone
  - String status
  - List<Sensor> sensores
  + void atualizarStatus(String novoStatus)
}

interface MissoesVoo {
  + void iniciarMissao()
  + void finalizarMissao()
}

class MissoesVooImpl {
  - Drone drone
  - CadastroArea area
  - RegistroDados dados
  + void iniciarMissao()
  + void finalizarMissao()
}

MissoesVoo <|.. MissoesVooImpl
MissoesVooImpl --> Drone
MissoesVooImpl --> CadastroArea
MissoesVooImpl --> RegistroDados

class Checklist {
  - boolean statusChecklist
  + boolean validarChecklist(Drone drone)
}

' =============================
' Áreas
' =============================
class CadastroArea {
  - double tamanho
  - String localizacao
  - String tipoCultivo
}

' =============================
' Dados e Relatórios
' =============================
class RegistroDados {
  - List<byte[]> imagens
  - List<Double> valoresSensores
  + void salvarDados()
}

class Relatorio {
  - List<Double> medicoes
  - int qtdVoo
  + void gerarResumo()
}

RegistroDados --> Relatorio

' =============================
' Usuários e Autorização
' =============================
class Usuario {
  - int userID
  - String nome
  - String email
  + boolean validarEmail()
}

class Administrador {
  + void gerenciarSistema()
}

class Operador {
  + void executarOperacoes()
}

Usuario <|-- Administrador
Usuario <|-- Operador

class Autorizacao {
  - String senhaHash
  - String token
  - String role
  + String verificarRole()
  + boolean validarSenha(String senhaDigitada)
}

Usuario --> Autorizacao

' =============================
' Serviços
' =============================
interface UsuarioService {
  + void cadastrar(Usuario usuario, String senha)
  + boolean autenticar(String email, String senha)
}

class UsuarioServiceImpl {
  + void cadastrar(Usuario usuario, String senha)
  + boolean autenticar(String email, String senha)
}

UsuarioService <|.. UsuarioServiceImpl

class JDBC {
  + Connection conectar()
  + void fechar()
}

@enduml
